// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedControl.SingleChoice should inherit container width 1`] = `
<div>
  <div
    style="width: 328px;"
  >
    <div
      class="segmented-control segmented-control--md segmented-control--has-container-width"
    >
      <div
        class="item selected"
      >
        <span
          class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
        >
          Label
        </span>
      </div>
      <div
        class="item"
      >
        <span
          class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
        >
          Label
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl.SingleChoice should render segments with icons and labels 1`] = `
<div>
  <div
    class="segmented-control segmented-control--md"
  >
    <div
      class="item selected"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl.SingleChoice should render segments with icons only 1`] = `
<div>
  <div
    class="segmented-control segmented-control--md"
  >
    <div
      class="item selected"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      >
        IconComponent
      </span>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl.SingleChoice should render segments with labels only 1`] = `
<div>
  <div
    class="segmented-control segmented-control--md"
  >
    <div
      class="item selected"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl.SingleChoice should render with one disabled option 1`] = `
<div>
  <div
    class="segmented-control segmented-control--md"
  >
    <div
      class="item selected"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item disabled"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default"
      >
        Label
      </span>
    </div>
  </div>
</div>
`;
